samples/_failures_safe/1761367535_153c26_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2b2c1dcd.c: In function ‘main’:
./samples/SAFE/__tmp_2b2c1dcd.c:154:13: error: expected ‘:’ or ‘...’ at end of input
  154 |             case 2
      |             ^~~~
./samples/SAFE/__tmp_2b2c1dcd.c:154:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2b2c1dcd.c:154:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2b2c1dcd.c:154:13: error: expected declaration or statement at end of input
